deployment/k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - port: 8080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"      
      labels:
        app: client
        version: v1
    spec:
      containers:
      - name: client
        image: samuelpereiradesouza/client:2
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
